adapt change from v28.2