@@ -3,14 +3,13 @@ package com.hjq.permissions;
 import android.app.Activity;
 import android.app.Fragment;
 import android.content.Context;
-
 import androidx.annotation.IntRange;
 import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
 import androidx.fragment.app.FragmentActivity;
-
 import com.hjq.permissions.fragment.factory.PermissionFragmentFactory;
-import com.hjq.permissions.fragment.factory.PermissionFragmentFactoryByApp;
+import com.hjq.permissions.fragment.factory.PermissionFragmentFactoryByAndroid;
+import com.hjq.permissions.fragment.factory.PermissionFragmentFactoryByAndroidX;
 import com.hjq.permissions.manifest.AndroidManifestParser;
 import com.hjq.permissions.permission.PermissionChannel;
 import com.hjq.permissions.permission.base.IPermission;
@@ -19,67 +18,60 @@ import com.hjq.permissions.tools.PermissionApi;
 import com.hjq.permissions.tools.PermissionChecker;
 import com.hjq.permissions.tools.PermissionSettingPage;
 import com.hjq.permissions.tools.PermissionUtils;
-
 import java.util.ArrayList;
 import java.util.List;
 
 /**
- *    author : Android Wheel Brother
- *    github : https://github.com/getActivity/XXPermissions
- *    time   : 2018/06/15
- *    desc   : Android permission request entry class.
- *
- * Provides a fluent API to build and request permissions.
+ * Entry point for building and running permission requests.
  */
 @SuppressWarnings({"unused", "deprecation"})
 public final class XXPermissions {
 
-    /** Request code for jumping to the permission settings page */
+    /** Request code for the permission settings page */
     public static final int REQUEST_CODE = 1024 + 1;
 
-    /** Type of the permission request interceptor (applies globally) */
+    /** Global permission interceptor type. */
     private static Class<? extends OnPermissionInterceptor> sPermissionInterceptorClass;
 
-    /** Type of the permission description handler (applies globally) */
+    /** Global permission description type. */
     private static Class<? extends OnPermissionDescription> sPermissionDescriptionClass;
 
-    /** Whether error-checking mode is enabled (applies globally) */
+    /** Global validation mode flag. */
     private static Boolean sCheckMode;
 
     /**
-     * Create a builder bound to the given context.
+     * Creates a request builder from a context.
      *
-     * @param context the current Activity; you may pass the top Activity on the stack
+     * @param context the current activity context
      */
     public static XXPermissions with(@NonNull Context context) {
         return new XXPermissions(context);
     }
 
-    public static XXPermissions with(@NonNull Fragment appFragment) {
-        return new XXPermissions(appFragment);
+    public static XXPermissions with(@NonNull Fragment fragment) {
+        return new XXPermissions(fragment);
     }
-    /**
-     * Enable or disable error-checking mode (global setting).
-     */
+
+    public static XXPermissions with(@NonNull androidx.fragment.app.Fragment xFragment) {
+        return new XXPermissions(xFragment);
+    }
+
+    /** Sets whether validation mode is enabled globally. */
     public static void setCheckMode(boolean checkMode) {
         sCheckMode = checkMode;
     }
 
-    /**
-     * Set the permission request interceptor (global setting).
-     */
+    /** Sets the global permission interceptor. */
     public static void setPermissionInterceptor(Class<? extends OnPermissionInterceptor> clazz) {
         sPermissionInterceptorClass = clazz;
     }
 
-    /**
-     * Get the permission request interceptor (global).
-     */
+    /** Returns the global permission interceptor. */
     @NonNull
     public static OnPermissionInterceptor getPermissionInterceptor() {
         if (sPermissionInterceptorClass != null) {
             try {
-                return sPermissionInterceptorClass.newInstance();
+                return sPermissionInterceptorClass.getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                 e.printStackTrace();
             }
@@ -88,25 +80,21 @@ public final class XXPermissions {
     }
 
     /**
-     * Set the permission description handler (global setting).
+     * Sets the global permission description type.
      *
-     * Explanation: Why only expose a Class instead of a normal object?
-     * If a normal object were used, that single instance would be reused globally.
-     * That can lead to conflicts when fields inside the handler are used concurrently.
-     * To avoid such issues, the best solution is to NOT reuse the same instance.
+     * <p>A class is stored instead of an instance so each request can create a fresh object.
+     * That avoids state leaking across requests.</p>
      */
     public static void setPermissionDescription(Class<? extends OnPermissionDescription> clazz) {
         sPermissionDescriptionClass = clazz;
     }
 
-    /**
-     * Get the permission description handler (global).
-     */
+    /** Returns the global permission description. */
     @NonNull
     public static OnPermissionDescription getPermissionDescription() {
         if (sPermissionDescriptionClass != null) {
             try {
-                return sPermissionDescriptionClass.newInstance();
+                return sPermissionDescriptionClass.getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                 e.printStackTrace();
             }
@@ -114,7 +102,7 @@ public final class XXPermissions {
         return new DefaultPermissionDescription();
     }
 
-    /** List of permissions to request */
+    /** Requested permission list */
     @NonNull
     private final List<IPermission> mRequestList = new ArrayList<>();
 
@@ -122,20 +110,23 @@ public final class XXPermissions {
     @Nullable
     private final Context mContext;
 
-    /** Fragment from the android.app package */
+    /** Framework Fragment instance. */
     @Nullable
-    private Fragment mAppFragment;
+    private Fragment mFragment;
 
+    /** AndroidX Fragment instance. */
+    @Nullable
+    private androidx.fragment.app.Fragment mXFragment;
 
     /** Permission request interceptor */
     @Nullable
     private OnPermissionInterceptor mPermissionInterceptor;
 
-    /** Permission request description handler */
+    /** Permission request description */
     @Nullable
     private OnPermissionDescription mPermissionDescription;
 
-    /** Whether to skip error checking */
+    /** Disable validation */
     @Nullable
     private Boolean mCheckMode;
 
@@ -143,24 +134,28 @@ public final class XXPermissions {
         mContext = context;
     }
 
-    private XXPermissions(@NonNull Fragment appFragment) {
-        mAppFragment = appFragment;
-        mContext = appFragment.getActivity();
+    private XXPermissions(@NonNull Fragment fragment) {
+        mFragment = fragment;
+        mContext = fragment.getActivity();
+    }
+
+    private XXPermissions(@NonNull androidx.fragment.app.Fragment xFragment) {
+        mXFragment = xFragment;
+        mContext = xFragment.getActivity();
     }
 
     /**
-     * Add a single permission.
+     * Add a single permission
      */
     public XXPermissions permission(@NonNull IPermission permission) {
-        // Purpose of this approach: if a duplicate permission is added,
-        // the last added entry takes precedence.
+        // This keeps the last added permission when the same permission is added repeatedly
         mRequestList.remove(permission);
         mRequestList.add(permission);
         return this;
     }
 
     /**
-     * Add multiple permissions.
+     * Add multiple permissions
      */
     public XXPermissions permissions(@NonNull List<IPermission> permissions) {
         if (permissions.isEmpty()) {
@@ -178,7 +173,7 @@ public final class XXPermissions {
     }
 
     /**
-     * Set the permission request interceptor.
+     * Sets the permission request interceptor.
      */
     public XXPermissions interceptor(@Nullable OnPermissionInterceptor permissionInterceptor) {
         mPermissionInterceptor = permissionInterceptor;
@@ -186,7 +181,7 @@ public final class XXPermissions {
     }
 
     /**
-     * Set the permission request description handler.
+     * Sets the permission request description.
      */
     public XXPermissions description(@Nullable OnPermissionDescription permissionDescription) {
         mPermissionDescription = permissionDescription;
@@ -194,7 +189,7 @@ public final class XXPermissions {
     }
 
     /**
-     * Disable the error-checking mechanism for this request.
+     * Disable the validation mechanism
      */
     public XXPermissions unchecked() {
         mCheckMode = false;
@@ -202,7 +197,7 @@ public final class XXPermissions {
     }
 
     /**
-     * Request permissions.
+     * Request permissions
      */
     public void request(@Nullable OnPermissionCallback callback) {
         if (mContext == null) {
@@ -219,27 +214,29 @@ public final class XXPermissions {
 
         final Context context = mContext;
 
-        final Fragment appFragment = mAppFragment;
+        final Fragment fragment = mFragment;
+
+        final androidx.fragment.app.Fragment xFragment = mXFragment;
 
         final OnPermissionInterceptor permissionInterceptor = mPermissionInterceptor;
 
         final OnPermissionDescription permissionDescription = mPermissionDescription;
 
-        // Permission request list (why not use the field directly?
-        // To support both new and old permissions on lower Android versions the framework
-        // may auto-add legacy permissions; copying avoids duplicates).
+        // Permission request list. A local variable is used instead of the field because the framework adds legacy permissions automatically on older versions, which avoids duplicate entries.
         List<IPermission> requestList = new ArrayList<>(mRequestList);
 
-        // Obtain the Activity from the Context
+        // Get the Activity from the Context object
         Activity activity = PermissionUtils.findActivity(context);
 
         if (isCheckMode(context)) {
-            // Verify that the provided Activity or Fragment state is valid
+            // Check whether the passed Activity or Fragment state is valid
             PermissionChecker.checkActivityStatus(activity);
-            if (appFragment != null) {
-                PermissionChecker.checkAppFragmentStatus(appFragment);
+            if (fragment != null) {
+                PermissionChecker.checkAndroidFragmentStatus(fragment);
+            } else if (xFragment != null) {
+                PermissionChecker.checkAndroidXFragmentStatus(xFragment);
             }
-            // Validate the requested permissions
+            // Check whether the passed permissions are valid
             PermissionChecker.checkPermissionList(activity, requestList, AndroidManifestParser.getAndroidManifestInfo(context));
         }
 
@@ -248,33 +245,36 @@ public final class XXPermissions {
             return;
         }
 
-        // Optimize the list of requested permissions (e.g., add legacy counterparts for newer ones)
+        // Optimize the requested permission list
         PermissionApi.addOldPermissionsByNewPermissions(activity, requestList);
 
-        // If all requested permissions are already granted
+        // Check whether all requested permissions have already been granted
         if (PermissionApi.isGrantedPermissions(context, requestList)) {
-            // Do not request again; notify success directly
+            // If so, skip the request and notify success directly
             permissionInterceptor.onRequestPermissionEnd(activity, true, requestList, requestList, new ArrayList<>(), callback);
             return;
         }
 
         final PermissionFragmentFactory<?, ?> fragmentFactory;
-        if (appFragment != null) {
-            if (PermissionUtils.isFragmentUnavailable(appFragment)) {
+        if (xFragment != null) {
+            if (PermissionUtils.isFragmentUnavailable(xFragment)) {
                 return;
             }
-            fragmentFactory = generatePermissionFragmentFactory(activity, appFragment);
+            fragmentFactory = generatePermissionFragmentFactory(activity, xFragment);
+        } else if (fragment != null) {
+            if (PermissionUtils.isFragmentUnavailable(fragment)) {
+                return;
+            }
+            fragmentFactory = generatePermissionFragmentFactory(activity, fragment);
         } else {
             fragmentFactory = generatePermissionFragmentFactory(activity);
         }
 
-        // Request the permissions that have not yet been granted
+        // Request permissions that have not been granted
         permissionInterceptor.onRequestPermissionStart(activity, requestList, fragmentFactory, permissionDescription, callback);
     }
 
-    /**
-     * Whether we are currently in check mode.
-     */
+    /** Returns whether validation mode is enabled. */
     private boolean isCheckMode(@NonNull Context context) {
         if (mCheckMode == null) {
             if (sCheckMode == null) {
@@ -286,7 +286,7 @@ public final class XXPermissions {
     }
 
     /**
-     * Determine whether a permission is granted.
+     * Check whether one or more permissions are all granted
      */
     public static boolean isGrantedPermission(@NonNull Context context, @NonNull IPermission permission) {
         return permission.isGrantedPermission(context);
@@ -301,7 +301,7 @@ public final class XXPermissions {
     }
 
     /**
-     * Get granted permissions from a list.
+     * Get granted permissions from the permission list
      */
     public static List<IPermission> getGrantedPermissions(@NonNull Context context, @NonNull IPermission[] permissions) {
         return getGrantedPermissions(context, PermissionUtils.asArrayList(permissions));
@@ -312,7 +312,7 @@ public final class XXPermissions {
     }
 
     /**
-     * Get denied (not granted) permissions from a list.
+     * Get ungranted permissions from the permission list
      */
     public static List<IPermission> getDeniedPermissions(@NonNull Context context, @NonNull IPermission[] permissions) {
         return getDeniedPermissions(context, PermissionUtils.asArrayList(permissions));
@@ -323,7 +323,7 @@ public final class XXPermissions {
     }
 
     /**
-     * Check whether two permissions are equal.
+     * Check whether two permissions are equal
      */
     public static boolean equalsPermission(@NonNull IPermission permission1, @NonNull IPermission permission2) {
         return PermissionUtils.equalsPermission(permission1, permission2);
@@ -338,7 +338,7 @@ public final class XXPermissions {
     }
 
     /**
-     * Check whether a list contains a specific permission.
+     * Check whether the permission list contains a permission
      */
     public static boolean containsPermission(@NonNull List<IPermission> permissions, @NonNull IPermission permission) {
         return PermissionUtils.containsPermission(permissions, permission);
@@ -349,22 +349,16 @@ public final class XXPermissions {
     }
 
     /**
-     * Check whether a permission is a health-related permission.
+     * Check whether a permission is a health permission
      */
     public static boolean isHealthPermission(@NonNull IPermission permission) {
         return PermissionApi.isHealthPermission(permission);
     }
 
     /**
-     * Determine whether one or more permissions have been marked "Don't ask again".
-     *
-     * If the checked permissions include dangerous permissions, pay special attention:
-     * 2) If the app has not requested a dangerous permission since launch, and you directly
-     *    check whether "Don't ask again" is set, the result will be inaccurate. It is
-     *    recommended to perform this check in the permission callback; there is no better approach.
-     * 3) During a dangerous permission request, if the user cancels by pressing the back button
-     *    or tapping outside the system dialog (instead of tapping "Deny"), the result will be
-     *    inaccurate. This has no perfect solution.
+     * Returns whether one or more permissions have been marked as Do not ask again.
+     * For dangerous permissions, this result is most reliable when checked from the
+     * permission callback after the user has interacted with the system dialog.
      */
     public static boolean isDoNotAskAgainPermission(@NonNull Activity activity, @NonNull IPermission permission) {
         return permission.isDoNotAskAgainPermission(activity);
@@ -389,9 +383,9 @@ public final class XXPermissions {
     }
 
     /**
-     * Navigate to the app's permission settings page.
+     * Opens the app permission settings page.
      *
-     * @param permissions permission groups that are not granted or were denied
+     * @param permissions the denied or ungranted permissions
      */
     public static void startPermissionActivity(@NonNull Context context, @NonNull List<IPermission> permissions) {
         Activity activity = PermissionUtils.findActivity(context);
@@ -422,7 +416,7 @@ public final class XXPermissions {
                                                @NonNull List<IPermission> permissions,
                                                @IntRange(from = 1, to = 65535) int requestCode) {
         StartActivityAgent.startActivityForResult(activity,
-                PermissionApi.getBestPermissionSettingIntent(activity, permissions, true), requestCode);
+            PermissionApi.getBestPermissionSettingIntent(activity, permissions, true), requestCode);
     }
 
     public static void startPermissionActivity(@NonNull Activity activity,
@@ -442,7 +436,7 @@ public final class XXPermissions {
             return;
         }
         PermissionFragmentFactory<?, ?> fragmentFactory = generatePermissionFragmentFactory(activity);
-        fragmentFactory.createAndCommitFragment(permissions, PermissionChannel.START_ACTIVITY_FOR_RESULT, () -> {
+        fragmentFactory.createAndCommitFragment(permissions, PermissionChannel.START_ACTIVITY, () -> {
             if (PermissionUtils.isActivityUnavailable(activity)) {
                 return;
             }
@@ -452,61 +446,124 @@ public final class XXPermissions {
 
     /* android.app.Fragment */
 
-    public static void startPermissionActivity(@NonNull Fragment appFragment) {
-        startPermissionActivity(appFragment, new ArrayList<>(0));
+    public static void startPermissionActivity(@NonNull Fragment fragment) {
+        startPermissionActivity(fragment, new ArrayList<>(0));
     }
 
-    public static void startPermissionActivity(@NonNull Fragment appFragment,
+    public static void startPermissionActivity(@NonNull Fragment fragment,
                                                @NonNull IPermission... permissions) {
-        startPermissionActivity(appFragment, PermissionUtils.asArrayList(permissions));
+        startPermissionActivity(fragment, PermissionUtils.asArrayList(permissions));
     }
 
-    public static void startPermissionActivity(@NonNull Fragment appFragment,
+    public static void startPermissionActivity(@NonNull Fragment fragment,
                                                @NonNull List<IPermission> permissions) {
-        startPermissionActivity(appFragment, permissions, REQUEST_CODE);
+        startPermissionActivity(fragment, permissions, REQUEST_CODE);
     }
 
-    public static void startPermissionActivity(@NonNull Fragment appFragment,
+    public static void startPermissionActivity(@NonNull Fragment fragment,
                                                @NonNull List<IPermission> permissions,
                                                @IntRange(from = 1, to = 65535) int requestCode) {
-        if (PermissionUtils.isFragmentUnavailable(appFragment)) {
+        if (PermissionUtils.isFragmentUnavailable(fragment)) {
             return;
         }
-        Activity activity = appFragment.getActivity();
-        if (PermissionUtils.isActivityUnavailable(activity) || PermissionUtils.isFragmentUnavailable(appFragment)) {
+        Activity activity = fragment.getActivity();
+        if (PermissionUtils.isActivityUnavailable(activity) || PermissionUtils.isFragmentUnavailable(fragment)) {
             return;
         }
         if (permissions.isEmpty()) {
-            StartActivityAgent.startActivity(appFragment, PermissionSettingPage.getCommonPermissionSettingIntent(activity));
+            StartActivityAgent.startActivity(fragment, PermissionSettingPage.getCommonPermissionSettingIntent(activity));
             return;
         }
-        StartActivityAgent.startActivityForResult(appFragment,
-                PermissionApi.getBestPermissionSettingIntent(activity, permissions, true), requestCode);
+        StartActivityAgent.startActivityForResult(fragment,
+            PermissionApi.getBestPermissionSettingIntent(activity, permissions, true), requestCode);
     }
 
-    public static void startPermissionActivity(@NonNull Fragment appFragment,
-                                               @NonNull IPermission permission,
-                                               @Nullable OnPermissionCallback callback) {
-        startPermissionActivity(appFragment, PermissionUtils.asArrayList(permission), callback);
+    public static void startPermissionActivity(@NonNull Fragment fragment,
+                                                @NonNull IPermission permission,
+                                                @Nullable OnPermissionCallback callback) {
+        startPermissionActivity(fragment, PermissionUtils.asArrayList(permission), callback);
     }
 
-    public static void startPermissionActivity(@NonNull Fragment appFragment,
+    public static void startPermissionActivity(@NonNull Fragment fragment,
                                                @NonNull List<IPermission> permissions,
                                                @Nullable OnPermissionCallback callback) {
-        if (PermissionUtils.isFragmentUnavailable(appFragment)) {
+        if (PermissionUtils.isFragmentUnavailable(fragment)) {
             return;
         }
-        Activity activity = appFragment.getActivity();
-        if (PermissionUtils.isActivityUnavailable(activity) || PermissionUtils.isFragmentUnavailable(appFragment)) {
+        Activity activity = fragment.getActivity();
+        if (PermissionUtils.isActivityUnavailable(activity) || PermissionUtils.isFragmentUnavailable(fragment)) {
             return;
         }
         if (permissions.isEmpty()) {
-            StartActivityAgent.startActivity(appFragment, PermissionSettingPage.getCommonPermissionSettingIntent(activity));
+            StartActivityAgent.startActivity(fragment, PermissionSettingPage.getCommonPermissionSettingIntent(activity));
             return;
         }
-        PermissionFragmentFactory<?, ?> fragmentFactory = generatePermissionFragmentFactory(activity, appFragment);
-        fragmentFactory.createAndCommitFragment(permissions, PermissionChannel.START_ACTIVITY_FOR_RESULT, () -> {
-            if (PermissionUtils.isActivityUnavailable(activity) || PermissionUtils.isFragmentUnavailable(appFragment)) {
+        PermissionFragmentFactory<?, ?> fragmentFactory = generatePermissionFragmentFactory(activity, fragment);
+        fragmentFactory.createAndCommitFragment(permissions, PermissionChannel.START_ACTIVITY, () -> {
+            if (PermissionUtils.isActivityUnavailable(activity) || PermissionUtils.isFragmentUnavailable(fragment)) {
+                return;
+            }
+            dispatchPermissionPageCallback(activity, permissions, callback);
+        });
+    }
+
+    /* androidx.fragment.app.Fragment */
+
+    public static void startPermissionActivity(@NonNull androidx.fragment.app.Fragment xFragment) {
+        startPermissionActivity(xFragment, new ArrayList<>());
+    }
+
+    public static void startPermissionActivity(@NonNull androidx.fragment.app.Fragment xFragment,
+                                               @NonNull IPermission... permissions) {
+        startPermissionActivity(xFragment, PermissionUtils.asArrayList(permissions));
+    }
+
+    public static void startPermissionActivity(@NonNull androidx.fragment.app.Fragment xFragment,
+                                               @NonNull List<IPermission> permissions) {
+        startPermissionActivity(xFragment, permissions, REQUEST_CODE);
+    }
+
+    public static void startPermissionActivity(@NonNull androidx.fragment.app.Fragment xFragment,
+                                               @NonNull List<IPermission> permissions,
+                                               @IntRange(from = 1, to = 65535) int requestCode) {
+        if (PermissionUtils.isFragmentUnavailable(xFragment)) {
+            return;
+        }
+        Activity activity = xFragment.getActivity();
+        if (PermissionUtils.isActivityUnavailable(activity) || PermissionUtils.isFragmentUnavailable(xFragment)) {
+            return;
+        }
+        if (permissions.isEmpty()) {
+            StartActivityAgent.startActivity(xFragment, PermissionSettingPage.getCommonPermissionSettingIntent(activity));
+            return;
+        }
+        StartActivityAgent.startActivityForResult(xFragment,
+            PermissionApi.getBestPermissionSettingIntent(activity, permissions, true), requestCode);
+    }
+
+    public static void startPermissionActivity(@NonNull androidx.fragment.app.Fragment xFragment,
+                                               @NonNull IPermission permission,
+                                               @Nullable OnPermissionCallback callback) {
+        startPermissionActivity(xFragment, PermissionUtils.asArrayList(permission), callback);
+    }
+
+    public static void startPermissionActivity(@NonNull androidx.fragment.app.Fragment xFragment,
+                                               @NonNull List<IPermission> permissions,
+                                               @Nullable OnPermissionCallback callback) {
+        if (PermissionUtils.isFragmentUnavailable(xFragment)) {
+            return;
+        }
+        Activity activity = xFragment.getActivity();
+        if (PermissionUtils.isActivityUnavailable(activity) || PermissionUtils.isFragmentUnavailable(xFragment)) {
+            return;
+        }
+        if (permissions.isEmpty()) {
+            StartActivityAgent.startActivity(xFragment, PermissionSettingPage.getCommonPermissionSettingIntent(activity));
+            return;
+        }
+        PermissionFragmentFactory<?, ?> fragmentFactory = generatePermissionFragmentFactory(activity, xFragment);
+        fragmentFactory.createAndCommitFragment(permissions, PermissionChannel.START_ACTIVITY, () -> {
+            if (PermissionUtils.isActivityUnavailable(activity) || PermissionUtils.isFragmentUnavailable(xFragment)) {
                 return;
             }
             dispatchPermissionPageCallback(activity, permissions, callback);
@@ -514,28 +571,44 @@ public final class XXPermissions {
     }
 
     /**
-     * Create a Fragment factory.
+     * Create the Fragment factory
      */
     @NonNull
     private static PermissionFragmentFactory<?, ?> generatePermissionFragmentFactory(@NonNull Activity activity) {
-        return generatePermissionFragmentFactory(activity, null);
+        return generatePermissionFragmentFactory(activity, null, null);
     }
-
 
     @NonNull
     private static PermissionFragmentFactory<?, ?> generatePermissionFragmentFactory(@NonNull Activity activity,
-                                                                                     @Nullable Fragment appFragment) {
+                                                                                     @Nullable androidx.fragment.app.Fragment xFragment) {
+        return generatePermissionFragmentFactory(activity, xFragment, null);
+    }
+
+    @NonNull
+    private static PermissionFragmentFactory<?, ?> generatePermissionFragmentFactory(@NonNull Activity activity,
+                                                                                     @Nullable Fragment fragment) {
+        return generatePermissionFragmentFactory(activity, null, fragment);
+    }
+
+    private static PermissionFragmentFactory<?, ?> generatePermissionFragmentFactory(@NonNull Activity activity,
+                                                                                     @Nullable androidx.fragment.app.Fragment xFragment,
+                                                                                     @Nullable Fragment fragment) {
         final PermissionFragmentFactory<?, ?> fragmentFactory;
-        if (appFragment != null) {
-            fragmentFactory = new PermissionFragmentFactoryByApp(appFragment.getActivity(), appFragment.getChildFragmentManager());
+        if (xFragment != null) {
+            fragmentFactory = new PermissionFragmentFactoryByAndroidX(xFragment.getActivity(), xFragment.getChildFragmentManager());
+        } else if (fragment != null) {
+            fragmentFactory = new PermissionFragmentFactoryByAndroid(fragment.getActivity(), fragment.getChildFragmentManager());
+        } else if (activity instanceof FragmentActivity) {
+            FragmentActivity fragmentActivity = ((FragmentActivity) activity);
+            fragmentFactory = new PermissionFragmentFactoryByAndroidX(fragmentActivity, fragmentActivity.getSupportFragmentManager());
         } else {
-            fragmentFactory = new PermissionFragmentFactoryByApp(activity, activity.getFragmentManager());
+            fragmentFactory = new PermissionFragmentFactoryByAndroid(activity, activity.getFragmentManager());
         }
         return fragmentFactory;
     }
 
     /**
-     * Dispatch the callback for returning from the permission settings page.
+     * Dispatch the permission settings page callback
      */
     private static void dispatchPermissionPageCallback(@NonNull Context context,
                                                        @NonNull List<IPermission> permissions,
@@ -545,7 +618,7 @@ public final class XXPermissions {
         }
         List<IPermission> grantedList = new ArrayList<>(permissions.size());
         List<IPermission> deniedList = new ArrayList<>(permissions.size());
-        // Iterate through the requested permissions and classify them by grant state
+        // Traverse the requested permissions and classify them by grant state
         for (IPermission permission : permissions) {
             if (permission.isGrantedPermission(context, false)) {
                 grantedList.add(permission);
